projects/compiler/test/typechecker/typeidentifier/error_typeargs_missing.out
Error at %FILE_NAME%:1:8
Incorrect number of type arguments
  |  var _: Map
            ^
Expected 2, but 0 were passed
